--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,11 +17,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.jdbc.batch_size=50
 
-# Desativa completamente a segurança do Spring
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
-
 # Configuração do CORS
 spring.web.cors.allowed-origins=http://localhost:4200
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
+
+# application.properties
+debug=true
